2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/cyg_ass.h (CYG_CHECK_FUNC_PTRC): Define with const pointer
	arguments.
	(CYG_CHECK_DATA_PTRC): Ditto. 
	(CYG_CHECK_FUNC_PTR): Ditto. 
	(CYG_CHECK_DATA_PTR): Ditto. 
	* src/null.cxx: Define cyg_check_data/func_ptr() with const args.
	* src/buffer.cxx: Ditto.
	* src/fancy.cxx: Ditto.
	* src/simple.cxx: Ditto.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* include/diag.h: 
	* src/diag.cxx (diag_vdump_buf_with_offset): New function.

2002-05-22  Jesper Skov  <jskov@redhat.com>

	* cdl/infra.cdl: Added two options to control CFLAGS.

2002-05-17  Martin Buck <martin.buck@ascom.ch>
 
 	* include/cyg_type.h (CYGBLD_ATTRIB_PRINTF_FORMAT): Add.
 
2002-05-23  Gary Thomas  <gthomas@redhat.com>

	* src/diag.cxx (_vprintf): Mapping of '\n'=>'\r\n' must be done
	at the _putc() level.

2002-04-17  Gary Thomas  <gthomas@redhat.com>

	* src/diag.cxx (diag_dump_buf_with_offset): Fix pad for short lines.

2002-04-16  Gary Thomas  <gthomas@redhat.com>

	* src/diag.cxx: Return proper length result for sprintf() functions.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* include/cyg_type.h: Allow HALs to override certain attrib macros.

2002-02-19  Gary Thomas  <gthomas@redhat.com>

	* src/diag.cxx (diag_snprintf): 
	* include/diag.h: Change function signature on diag_snprintf()
	to match snprintf() found in stdio.

2002-02-13  Jonathan Larmour  <jlarmour@redhat.com>

	* include/cyg_trac.h: Make message type of trace functions be
	const char * to help avoid warnings with callers.
	* src/null.cxx: Reflect that in actual functions.
	* src/fancy.cxx: Ditto.
	* src/simple.cxx: Ditto.
	* src/buffer.cxx: Ditto.

2002-01-31  Hugo Tyson  <hmt@redhat.com>

	* src/tcdiag.cxx (cyg_assert_msg): Enable this function
	universally; given the extra usefulness it now has (see below)
	it's worth always having around by default in asserted builds.
	It can be disabled with CYGDBG_INFRA_DEBUG_ASSERT_MESSAGE = 0.
